server/out/VTLParser.js
"use strict";
// Generated from VTLParser.g4 by ANTLR 4.9.0-SNAPSHOT
Object.defineProperty(exports, "__esModule", { value: true });
exports.IdContext = exports.Map_entryContext = exports.Map_entriesContext = exports.MapContext = exports.ListContext = exports.ExpressionContext = exports.EndContext = exports.Macro_call_directiveContext = exports.Evaluate_directiveContext = exports.Include_directiveContext = exports.Define_directiveContext = exports.Parse_directiveContext = exports.Macro_directiveContext = exports.Custom_directiveContext = exports.Stop_directiveContext = exports.Break_directiveContext = exports.Foreach_directiveContext = exports.Else_directiveContext = exports.Elseif_directiveContext = exports.If_directiveContext = exports.Set_directiveContext = exports.ExpressionsContext = exports.Property_endContext = exports.DirectiveContext = exports.Formal_property_or_methodContext = exports.Property_or_methodContext = exports.VariableContext = exports.FormalContext = exports.AtomContext = exports.BlockContext = exports.ParseContext = exports.VTLParser = void 0;
const ATN_1 = require("antlr4ts/atn/ATN");
const ATNDeserializer_1 = require("antlr4ts/atn/ATNDeserializer");
const FailedPredicateException_1 = require("antlr4ts/FailedPredicateException");
const NoViableAltException_1 = require("antlr4ts/NoViableAltException");
const Parser_1 = require("antlr4ts/Parser");
const ParserRuleContext_1 = require("antlr4ts/ParserRuleContext");
const ParserATNSimulator_1 = require("antlr4ts/atn/ParserATNSimulator");
const RecognitionException_1 = require("antlr4ts/RecognitionException");
const Token_1 = require("antlr4ts/Token");
const VocabularyImpl_1 = require("antlr4ts/VocabularyImpl");
const Utils = require("antlr4ts/misc/Utils");
class VTLParser extends Parser_1.Parser {
    constructor(input) {
        super(input);
        this._interp = new ParserATNSimulator_1.ParserATNSimulator(VTLParser._ATN, this);
    }
    // @Override
    // @NotNull
    get vocabulary() {
        return VTLParser.VOCABULARY;
    }
    // tslint:enable:no-trailing-whitespace
    // @Override
    get grammarFileName() { return "VTLParser.g4"; }
    // @Override
    get ruleNames() { return VTLParser.ruleNames; }
    // @Override
    get serializedATN() { return VTLParser._serializedATN; }
    createFailedPredicateException(predicate, message) {
        return new FailedPredicateException_1.FailedPredicateException(this, predicate, message);
    }
    // @RuleVersion(0)
    parse() {
        let _localctx = new ParseContext(this._ctx, this.state);
        this.enterRule(_localctx, 0, VTLParser.RULE_parse);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 62;
                this.block();
                this.state = 63;
                this.match(VTLParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    block() {
        let _localctx = new BlockContext(this._ctx, this.state);
        this.enterRule(_localctx, 2, VTLParser.RULE_block);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 68;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === VTLParser.ID || _la === VTLParser.REFERENCE || ((((_la - 44)) & ~0x1F) === 0 && ((1 << (_la - 44)) & ((1 << (VTLParser.IF - 44)) | (1 << (VTLParser.FOREACH - 44)) | (1 << (VTLParser.SET - 44)) | (1 << (VTLParser.BREAK - 44)) | (1 << (VTLParser.MACRO_ID - 44)) | (1 << (VTLParser.MACRO - 44)) | (1 << (VTLParser.STOP - 44)) | (1 << (VTLParser.INCLUDE - 44)) | (1 << (VTLParser.EVALUATE - 44)) | (1 << (VTLParser.PARSE - 44)) | (1 << (VTLParser.DEFINE - 44)) | (1 << (VTLParser.ESCAPED_CHAR - 44)) | (1 << (VTLParser.DOLLAR_EXCL_OBRACE - 44)) | (1 << (VTLParser.DOLLAR_OBRACE - 44)) | (1 << (VTLParser.DOLLAR_EXCL - 44)) | (1 << (VTLParser.DOLLAR - 44)) | (1 << (VTLParser.TEXT - 44)) | (1 << (VTLParser.ESCAPED_BLOCK - 44)))) !== 0)) {
                    {
                        {
                            this.state = 65;
                            this.atom();
                        }
                    }
                    this.state = 70;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    atom() {
        let _localctx = new AtomContext(this._ctx, this.state);
        this.enterRule(_localctx, 4, VTLParser.RULE_atom);
        try {
            this.state = 78;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 1, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 71;
                        this.match(VTLParser.TEXT);
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 72;
                        this.match(VTLParser.ESCAPED_CHAR);
                    }
                    break;
                case 3:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 73;
                        this.match(VTLParser.ESCAPED_BLOCK);
                    }
                    break;
                case 4:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 74;
                        this.variable();
                    }
                    break;
                case 5:
                    this.enterOuterAlt(_localctx, 5);
                    {
                        this.state = 75;
                        this.formal();
                    }
                    break;
                case 6:
                    this.enterOuterAlt(_localctx, 6);
                    {
                        this.state = 76;
                        this.property_or_method();
                    }
                    break;
                case 7:
                    this.enterOuterAlt(_localctx, 7);
                    {
                        this.state = 77;
                        this.directive();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    formal() {
        let _localctx = new FormalContext(this._ctx, this.state);
        this.enterRule(_localctx, 6, VTLParser.RULE_formal);
        try {
            this.state = 96;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 2, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 80;
                        this.match(VTLParser.DOLLAR_OBRACE);
                        this.state = 81;
                        this.formal_property_or_method();
                        this.state = 82;
                        this.match(VTLParser.CBRACE);
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 84;
                        this.match(VTLParser.DOLLAR_EXCL_OBRACE);
                        this.state = 85;
                        this.formal_property_or_method();
                        this.state = 86;
                        this.match(VTLParser.CBRACE);
                    }
                    break;
                case 3:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 88;
                        this.match(VTLParser.DOLLAR_OBRACE);
                        this.state = 89;
                        this.id();
                        this.state = 90;
                        this.match(VTLParser.CBRACE);
                    }
                    break;
                case 4:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 92;
                        this.match(VTLParser.DOLLAR_EXCL_OBRACE);
                        this.state = 93;
                        this.id();
                        this.state = 94;
                        this.match(VTLParser.CBRACE);
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    variable() {
        let _localctx = new VariableContext(this._ctx, this.state);
        this.enterRule(_localctx, 8, VTLParser.RULE_variable);
        try {
            this.state = 112;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case VTLParser.DOLLAR:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 98;
                        this.match(VTLParser.DOLLAR);
                        this.state = 99;
                        this.id();
                        this.state = 101;
                        this._errHandler.sync(this);
                        switch (this.interpreter.adaptivePredict(this._input, 3, this._ctx)) {
                            case 1:
                                {
                                    this.state = 100;
                                    this.match(VTLParser.DOT);
                                }
                                break;
                        }
                    }
                    break;
                case VTLParser.DOLLAR_EXCL:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 103;
                        this.match(VTLParser.DOLLAR_EXCL);
                        this.state = 104;
                        this.id();
                        this.state = 106;
                        this._errHandler.sync(this);
                        switch (this.interpreter.adaptivePredict(this._input, 4, this._ctx)) {
                            case 1:
                                {
                                    this.state = 105;
                                    this.match(VTLParser.DOT);
                                }
                                break;
                        }
                    }
                    break;
                case VTLParser.REFERENCE:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 108;
                        this.match(VTLParser.REFERENCE);
                        this.state = 110;
                        this._errHandler.sync(this);
                        switch (this.interpreter.adaptivePredict(this._input, 5, this._ctx)) {
                            case 1:
                                {
                                    this.state = 109;
                                    this.match(VTLParser.DOT);
                                }
                                break;
                        }
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    property_or_method() {
        let _localctx = new Property_or_methodContext(this._ctx, this.state);
        this.enterRule(_localctx, 10, VTLParser.RULE_property_or_method);
        try {
            let _alt;
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 114;
                this.variable();
                this.state = 116;
                this._errHandler.sync(this);
                _alt = 1;
                do {
                    switch (_alt) {
                        case 1:
                            {
                                {
                                    this.state = 115;
                                    this.property_end();
                                }
                            }
                            break;
                        default:
                            throw new NoViableAltException_1.NoViableAltException(this);
                    }
                    this.state = 118;
                    this._errHandler.sync(this);
                    _alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
                } while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    formal_property_or_method() {
        let _localctx = new Formal_property_or_methodContext(this._ctx, this.state);
        this.enterRule(_localctx, 12, VTLParser.RULE_formal_property_or_method);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 120;
                this.id();
                this.state = 122;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                do {
                    {
                        {
                            this.state = 121;
                            this.property_end();
                        }
                    }
                    this.state = 124;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << VTLParser.OPAR) | (1 << VTLParser.OBRACK) | (1 << VTLParser.DOT))) !== 0));
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    directive() {
        let _localctx = new DirectiveContext(this._ctx, this.state);
        this.enterRule(_localctx, 14, VTLParser.RULE_directive);
        try {
            this.state = 138;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case VTLParser.SET:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 126;
                        this.set_directive();
                    }
                    break;
                case VTLParser.IF:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 127;
                        this.if_directive();
                    }
                    break;
                case VTLParser.FOREACH:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 128;
                        this.foreach_directive();
                    }
                    break;
                case VTLParser.BREAK:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 129;
                        this.break_directive();
                    }
                    break;
                case VTLParser.STOP:
                    this.enterOuterAlt(_localctx, 5);
                    {
                        this.state = 130;
                        this.stop_directive();
                    }
                    break;
                case VTLParser.MACRO:
                    this.enterOuterAlt(_localctx, 6);
                    {
                        this.state = 131;
                        this.macro_directive();
                    }
                    break;
                case VTLParser.PARSE:
                    this.enterOuterAlt(_localctx, 7);
                    {
                        this.state = 132;
                        this.parse_directive();
                    }
                    break;
                case VTLParser.DEFINE:
                    this.enterOuterAlt(_localctx, 8);
                    {
                        this.state = 133;
                        this.define_directive();
                    }
                    break;
                case VTLParser.INCLUDE:
                    this.enterOuterAlt(_localctx, 9);
                    {
                        this.state = 134;
                        this.include_directive();
                    }
                    break;
                case VTLParser.EVALUATE:
                    this.enterOuterAlt(_localctx, 10);
                    {
                        this.state = 135;
                        this.evaluate_directive();
                    }
                    break;
                case VTLParser.MACRO_ID:
                    this.enterOuterAlt(_localctx, 11);
                    {
                        this.state = 136;
                        this.macro_call_directive();
                    }
                    break;
                case VTLParser.ID:
                    this.enterOuterAlt(_localctx, 12);
                    {
                        this.state = 137;
                        this.custom_directive();
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    property_end() {
        let _localctx = new Property_endContext(this._ctx, this.state);
        this.enterRule(_localctx, 16, VTLParser.RULE_property_end);
        let _la;
        try {
            this.state = 151;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case VTLParser.DOT:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 140;
                        this.match(VTLParser.DOT);
                        this.state = 141;
                        this.match(VTLParser.ID);
                    }
                    break;
                case VTLParser.OBRACK:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 142;
                        this.match(VTLParser.OBRACK);
                        this.state = 143;
                        this.expression(0);
                        this.state = 144;
                        this.match(VTLParser.CBRACK);
                    }
                    break;
                case VTLParser.OPAR:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 146;
                        this.match(VTLParser.OPAR);
                        this.state = 148;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << VTLParser.OBRACK) | (1 << VTLParser.OBRACE) | (1 << VTLParser.STRING) | (1 << VTLParser.INTEGER) | (1 << VTLParser.ID) | (1 << VTLParser.REFERENCE) | (1 << VTLParser.K_NULL) | (1 << VTLParser.SUB) | (1 << VTLParser.FLOAT) | (1 << VTLParser.EXCL))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (VTLParser.K_LT - 32)) | (1 << (VTLParser.K_LE - 32)) | (1 << (VTLParser.K_GT - 32)) | (1 << (VTLParser.K_GE - 32)) | (1 << (VTLParser.K_EQ - 32)) | (1 << (VTLParser.K_NE - 32)) | (1 << (VTLParser.K_TRUE - 32)) | (1 << (VTLParser.K_FALSE - 32)) | (1 << (VTLParser.K_AND - 32)) | (1 << (VTLParser.K_OR - 32)) | (1 << (VTLParser.K_NOT - 32)) | (1 << (VTLParser.K_IN - 32)) | (1 << (VTLParser.DOLLAR_EXCL - 32)) | (1 << (VTLParser.DOLLAR - 32)))) !== 0)) {
                            {
                                this.state = 147;
                                this.expressions();
                            }
                        }
                        this.state = 150;
                        this.match(VTLParser.CPAR);
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    expressions() {
        let _localctx = new ExpressionsContext(this._ctx, this.state);
        this.enterRule(_localctx, 18, VTLParser.RULE_expressions);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 153;
                this.expression(0);
                this.state = 158;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === VTLParser.COMMA) {
                    {
                        {
                            this.state = 154;
                            this.match(VTLParser.COMMA);
                            this.state = 155;
                            this.expression(0);
                        }
                    }
                    this.state = 160;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    set_directive() {
        let _localctx = new Set_directiveContext(this._ctx, this.state);
        this.enterRule(_localctx, 20, VTLParser.RULE_set_directive);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 161;
                this.match(VTLParser.SET);
                this.state = 162;
                this.expression(0);
                this.state = 163;
                this.match(VTLParser.ASSIGN);
                this.state = 164;
                this.expression(0);
                this.state = 165;
                this.match(VTLParser.CPAR);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    if_directive() {
        let _localctx = new If_directiveContext(this._ctx, this.state);
        this.enterRule(_localctx, 22, VTLParser.RULE_if_directive);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 167;
                this.match(VTLParser.IF);
                this.state = 168;
                this.expression(0);
                this.state = 169;
                this.match(VTLParser.CPAR);
                this.state = 170;
                this.block();
                this.state = 174;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === VTLParser.ELSEIF) {
                    {
                        {
                            this.state = 171;
                            this.elseif_directive();
                        }
                    }
                    this.state = 176;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 178;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === VTLParser.ELSE) {
                    {
                        this.state = 177;
                        this.else_directive();
                    }
                }
                this.state = 180;
                this.end();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    elseif_directive() {
        let _localctx = new Elseif_directiveContext(this._ctx, this.state);
        this.enterRule(_localctx, 24, VTLParser.RULE_elseif_directive);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 182;
                this.match(VTLParser.ELSEIF);
                this.state = 183;
                this.expression(0);
                this.state = 184;
                this.match(VTLParser.CPAR);
                this.state = 185;
                this.block();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    else_directive() {
        let _localctx = new Else_directiveContext(this._ctx, this.state);
        this.enterRule(_localctx, 26, VTLParser.RULE_else_directive);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 187;
                this.match(VTLParser.ELSE);
                this.state = 188;
                this.block();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    foreach_directive() {
        let _localctx = new Foreach_directiveContext(this._ctx, this.state);
        this.enterRule(_localctx, 28, VTLParser.RULE_foreach_directive);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 190;
                this.match(VTLParser.FOREACH);
                this.state = 191;
                this.variable();
                this.state = 192;
                this.match(VTLParser.K_IN);
                this.state = 193;
                this.expression(0);
                this.state = 194;
                this.match(VTLParser.CPAR);
                this.state = 195;
                this.block();
                this.state = 196;
                this.end();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    break_directive() {
        let _localctx = new Break_directiveContext(this._ctx, this.state);
        this.enterRule(_localctx, 30, VTLParser.RULE_break_directive);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 198;
                this.match(VTLParser.BREAK);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    stop_directive() {
        let _localctx = new Stop_directiveContext(this._ctx, this.state);
        this.enterRule(_localctx, 32, VTLParser.RULE_stop_directive);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 200;
                this.match(VTLParser.STOP);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    custom_directive() {
        let _localctx = new Custom_directiveContext(this._ctx, this.state);
        this.enterRule(_localctx, 34, VTLParser.RULE_custom_directive);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 202;
                this.match(VTLParser.ID);
                this.state = 210;
                this._errHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this._input, 16, this._ctx)) {
                    case 1:
                        {
                            this.state = 206;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << VTLParser.OBRACK) | (1 << VTLParser.OBRACE) | (1 << VTLParser.STRING) | (1 << VTLParser.INTEGER) | (1 << VTLParser.ID) | (1 << VTLParser.REFERENCE) | (1 << VTLParser.K_NULL) | (1 << VTLParser.SUB) | (1 << VTLParser.FLOAT) | (1 << VTLParser.EXCL))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (VTLParser.K_LT - 32)) | (1 << (VTLParser.K_LE - 32)) | (1 << (VTLParser.K_GT - 32)) | (1 << (VTLParser.K_GE - 32)) | (1 << (VTLParser.K_EQ - 32)) | (1 << (VTLParser.K_NE - 32)) | (1 << (VTLParser.K_TRUE - 32)) | (1 << (VTLParser.K_FALSE - 32)) | (1 << (VTLParser.K_AND - 32)) | (1 << (VTLParser.K_OR - 32)) | (1 << (VTLParser.K_NOT - 32)) | (1 << (VTLParser.K_IN - 32)) | (1 << (VTLParser.DOLLAR_EXCL - 32)) | (1 << (VTLParser.DOLLAR - 32)))) !== 0)) {
                                {
                                    {
                                        this.state = 203;
                                        this.expression(0);
                                    }
                                }
                                this.state = 208;
                                this._errHandler.sync(this);
                                _la = this._input.LA(1);
                            }
                            this.state = 209;
                            this.match(VTLParser.CPAR);
                        }
                        break;
                }
                this.state = 215;
                this._errHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this._input, 17, this._ctx)) {
                    case 1:
                        {
                            this.state = 212;
                            this.block();
                            this.state = 213;
                            this.end();
                        }
                        break;
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    macro_directive() {
        let _localctx = new Macro_directiveContext(this._ctx, this.state);
        this.enterRule(_localctx, 36, VTLParser.RULE_macro_directive);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 217;
                this.match(VTLParser.MACRO);
                this.state = 221;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << VTLParser.OBRACK) | (1 << VTLParser.OBRACE) | (1 << VTLParser.STRING) | (1 << VTLParser.INTEGER) | (1 << VTLParser.ID) | (1 << VTLParser.REFERENCE) | (1 << VTLParser.K_NULL) | (1 << VTLParser.SUB) | (1 << VTLParser.FLOAT) | (1 << VTLParser.EXCL))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (VTLParser.K_LT - 32)) | (1 << (VTLParser.K_LE - 32)) | (1 << (VTLParser.K_GT - 32)) | (1 << (VTLParser.K_GE - 32)) | (1 << (VTLParser.K_EQ - 32)) | (1 << (VTLParser.K_NE - 32)) | (1 << (VTLParser.K_TRUE - 32)) | (1 << (VTLParser.K_FALSE - 32)) | (1 << (VTLParser.K_AND - 32)) | (1 << (VTLParser.K_OR - 32)) | (1 << (VTLParser.K_NOT - 32)) | (1 << (VTLParser.K_IN - 32)) | (1 << (VTLParser.DOLLAR_EXCL - 32)) | (1 << (VTLParser.DOLLAR - 32)))) !== 0)) {
                    {
                        {
                            this.state = 218;
                            this.expression(0);
                        }
                    }
                    this.state = 223;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 224;
                this.match(VTLParser.CPAR);
                this.state = 225;
                this.block();
                this.state = 226;
                this.end();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    parse_directive() {
        let _localctx = new Parse_directiveContext(this._ctx, this.state);
        this.enterRule(_localctx, 38, VTLParser.RULE_parse_directive);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 228;
                this.match(VTLParser.PARSE);
